<resources>
    <string name="app_name">Tizeta AD340</string>
    <string name="edit_message">Search</string>
    <string name="button_submit">Sumbit</string>
    <string name="button_Home">Home</string>
    <string name="button_Cameras">Cameras</string>
    <string name="button_Maps">Maps</string>
    <string name="button_ZMovies">Zombie Movies</string>
    <string name="logo_movie">movie image</string>
    <string name="cam_preview">Camera Preview</string>
    <string name="username">username</string>
    <string name="details">details</string>
    <string name="enter_name">enter_name</string>
    <string name="email">email</string>
    <string name="password">password</string>


</resources>